--- a/css/contrive.css
+++ b/css/contrive.css
@@ -13,7 +13,7 @@
 /* ORNAMENTS */
 @import url('backgrounds.css');
 @import url('frames.css');
-@import url('dividers.css');
+@import url('lace.css');
 @import url('accents.css');
 @import url('seals.css');
 
