--- a/css/masks.css
+++ b/css/masks.css
@@ -1,5 +1,10 @@
 /* MASKS */
 @import url('variables.css');
+.mask-text {
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	background-clip: text; 
+}
 .mask {
 	mask-size: contain; mask-repeat: no-repeat;
 	mask-position: center center; background-color: var(--accent);
