--- a/css/lace.css
+++ b/css/lace.css
@@ -1,4 +1,5 @@
-/* lace */
+/* LACE ACCENT */
+@import url('variables.css');
 .lace {min-height: 70px; padding: 0;}
 .lace.strand {
     background-image: radial-gradient(circle at 10px 0, rgba(255,255,255,0) 9px, var(--lacecolor) 10px, rgba(255,255,255,0) 11px);
