--- a/css/theme.css
+++ b/css/theme.css
@@ -144,7 +144,7 @@ nav.piano ul li a:hover {color: #fff;}
 
 /* BALDUR BUTTON */
 .baldur-btn {
-  position: relative; border-width: 4px 12px;
+  position: relative; border-width: 4px 12px; z-index: 0;
   border-style: solid; border-color: transparent;
   padding: 8px 24px; text-align: center; color: var(--secondary);
   transition-property: transform; font-weight: 600;
