--- a/css/backgrounds.css
+++ b/css/backgrounds.css
@@ -73,7 +73,7 @@
 .tossed-vines {background-image: url('images/wallpapers/tossed_vines.jpg');}
 .uncovering {background-image: url('images/wallpapers/uncovering.jpg');}
 .vibrant-mix {background-image: url('images/wallpapers/vibrant_mix.jpg');}
-.victoran-lace {background-image: url('images/wallpapers/victorian_lace.jpg');}
+.victorian-lace {background-image: url('images/wallpapers/victorian_lace.jpg');}
 .vine-panels {background-image: url('images/wallpapers/vine_panels.jpg');}
 .volary-vogue {background-image: url('images/wallpapers/volary_vogue.jpg');}
 .warmth {background-image: url('images/wallpapers/warmth.jpg');}
